<resources>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_repeat">Repeat one</string>
    <string name="search_device">Device</string>
    <string name="search_internet">Internet</string>
    <string name="app_name">GeoPlayer</string>
    <string name="app_short_name">GP</string>
    <string name="artist">Tarja Turunen</string>
    <string name="current_song">\--- Now playing \"Phantom of the Opera\"\---</string>
    <string name="song_1">Phantom of the Opera</string>
    <string name="song_2">Title of Song 2</string>
    <string name="song_3">Title of Song 3</string>
    <string name="song_4">Title of Song 4</string>
    <string name="album_1">Album \"Act 1\"</string>
    <string name="album_2">Album 2</string>
    <string name="album_3">Album 3</string>
    <string name="album_4">Album 4</string>
    <string name="info_main">This is the main screen of the app. It shows the lists: All songs, Albums, Artists, Playlists, Favorites, using a spinner on the action bar.
        \n When the user click on the songs title, a new activity is opened - \"Now playing\", with title and name of the artist.
        \n Action bar have icons/buttons for shuffle and repeat one. Also there is a drop-down menu, which provides possibility to search for music into device and throw Internet, to share, take help or change settings of the app.
        \nI will use the public abstract class ContentResolver to retrieve track on the device. Using the ContentResolver I will create a Cursor instance to query the music files.
        \n I will implement the public class MediaPlayer, which is the primary API for playing sound and video. I made control buttons, but maybe I will think about implementation of the public class MediaController to control playback.
        \n A Service instance will be used to play audio, when the user is not interacting with the app directly.</string>
    <string name="info_song1">This is the Now playing screen. It shows title, picture and name of the artist.
        \n Action bar provides possibility to shuffle and repeat one, also to share, take help or change settings of the app. </string>
    <string name="info_albums">This is the Albums screen. It shows the list of Albums.
        \n When the user click on the album title, the Albums activity is opened.
    \n Action bar have spinner menu. Also there is a drop-down menu, which provides possibility to share, take help or change settings of the app.</string>
    <string name="send_music">Music send by the GeoPlayer app</string>
    <string name="share_comment">Share music with your friends.</string>
    <string name="comment">Get the GeoPlayer app on Google Play</string>
    <string-array name="spinner_list">
        <item>Select category</item>
        <item>All</item>
        <item>Albums</item>
        <item>Artists</item>
        <item>Playlists</item>
        <item>Favorites</item>
    </string-array>
</resources>
