<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Song1">

    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_action_shuffle"
        android:orderInCategory="100"
        android:title="@string/action_shuffle"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_repeat"
        android:icon="@drawable/ic_action_repeat"
        android:orderInCategory="101"
        android:title="@string/action_repeat"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="102"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="103"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>