<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relative_layout"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headerView"
        style="@style/linear_layout_header">

        <TextView
            android:id="@+id/current_song"
            style="@style/text_view"
            android:text="@string/current_song"/>

    </LinearLayout>

    <ScrollView style="@style/scroll_view">

        <LinearLayout style="@style/linear_layout">

            <TextView
                android:id="@+id/song_1"
                style="@style/CategoryStyle"
                android:background="@color/orange"
                android:drawableEnd="@drawable/ic_action_current"
                android:drawableRight="@drawable/ic_action_current"
                android:text="@string/song_1" />

            <TextView
                android:id="@+id/song_2"
                style="@style/CategoryStyle"
                android:background="@color/green"
                android:text="@string/song_2" />

            <TextView
                android:id="@+id/song_3"
                style="@style/CategoryStyle"
                android:background="@color/deep_purple"
                android:drawableEnd="@drawable/ic_action_hart"
                android:drawableRight="@drawable/ic_action_hart"
                android:text="@string/song_3" />

            <TextView
                android:id="@+id/song_4"
                style="@style/CategoryStyle"
                android:background="@color/yellow"
                android:text="@string/song_4" />

            <TextView
                android:id="@+id/info_main"
                style="@style/text_view_left"
                android:text="@string/info_main" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footerView"
        style="@style/linear_layout_footer"
        android:scaleX="0.7"
        android:scaleY="0.7">

        <Button
            android:id="@+id/bn1"
            style="@style/button"
            android:background="@drawable/ic_rewind"
            android:scaleX="0.8"
            android:scaleY="0.8" />

        <Button
            android:id="@+id/bn2"
            style="@style/button"
            android:background="@drawable/ic_play" />

        <Button
            android:id="@+id/bn3"
            style="@style/button"
            android:background="@drawable/ic_stop"
            android:scaleX="0.65"
            android:scaleY="0.65" />

        <Button
            android:id="@+id/bn4"
            style="@style/button"
            android:background="@drawable/ic_forward"
            android:scaleX="0.8"
            android:scaleY="0.8" />
    </LinearLayout>
</RelativeLayout>

