<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relative_layout"
    tools:context=".Song1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="?homeAsUpIndicator">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headerView"
        style="@style/linear_layout_header">

        <TextView
            android:id="@+id/current_song"
            style="@style/text_view"
            android:text="@string/current_song" />

    </LinearLayout>

    <ScrollView style="@style/scroll_view">

        <LinearLayout style="@style/current_linear_layout">

            <TextView
                style="@style/artist_text_view"
                android:text="@string/artist" />

            <TextView
                style="@style/song_text_view"
                android:text="@string/song_1" />

            <ImageView
                android:id="@+id/artist_photo"
                style="@style/image"
                android:src="@drawable/artist_photo"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/info_main"
                style="@style/text_view_left"
                android:text="@string/info_song1" />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/footerView"
        style="@style/linear_layout_footer"
        android:scaleX="0.7"
        android:scaleY="0.7">

        <Button
            android:id="@+id/bn1"
            style="@style/button"
            android:background="@drawable/ic_rewind"
            android:scaleX="0.8"
            android:scaleY="0.8" />

        <Button
            android:id="@+id/bn2"
            style="@style/button"
            android:background="@drawable/ic_play" />

        <Button
            android:id="@+id/bn3"
            style="@style/button"
            android:background="@drawable/ic_stop"
            android:scaleX="0.65"
            android:scaleY="0.65" />

        <Button
            android:id="@+id/bn4"
            style="@style/button"
            android:background="@drawable/ic_forward"
            android:scaleX="0.8"
            android:scaleY="0.8" />
    </LinearLayout>
</RelativeLayout>

